--- a/.ENV
+++ b/.ENV
@@ -1,1 +1,1 @@
-CLOUDINARY_URL=cloudinary://<836396379746131>:<1JoDQp1Cctlz-fr45BIuzhCE8AQ>@dpbweqf7f
+CLOUDINARY_URL=cloudinary://836396379746131:1JoDQp1Cctlz-fr45BIuzhCE8AQ@dpbweqf7f
